crates/myso-display/src/v2/snapshots/myso_display__v2__parser__tests__decimal_literal_only_underscores.snap
---
source: crates/myso-display/src/v2/parser.rs
expression: "strands(r#\"{___u64}\"#)"
---
{ ___u64
}@0
