crates/myso-display/src/v2/snapshots/myso_display__v2__parser__tests__double_arrow_missing_index.snap
---
source: crates/myso-display/src/v2/parser.rs
expression: "strands(r#\"{foo=>}\"#)"
---
Error: Unexpected '}' at byte offset 6, expected '['
