crates/myso-display/src/v2/snapshots/myso_display__v2__parser__tests__enum_literal_positional_trailing.snap
---
source: crates/myso-display/src/v2/parser.rs
expression: "strands(r#\"{0x1::option::Option<u64>::Some#1(42u64, 43u64, 44u64}\"#)"
---
Error: Unexpected '}' at byte offset 53, expected one of ',', or ')'
