crates/myso-display/src/v2/snapshots/myso_display__v2__parser__tests__enum_positional_literals.snap
---
source: crates/myso-display/src/v2/parser.rs
expression: "strands(\"{ 0x1::option::Option<u64>::Some#1(42u64,) \\\n             | 0x1::option::Option<u32>::1(43u32) \\\n             | 0x1::option::Option<u16>::0() }\")"
---
{ 0x0000000000000000000000000000000000000000000000000000000000000001::option::Option<u64>::Some#1(
      42u64,
  )
| 0x0000000000000000000000000000000000000000000000000000000000000001::option::Option<u32>::1(
      43u32,
  )
| 0x0000000000000000000000000000000000000000000000000000000000000001::option::Option<u16>::0
}@0
