crates/myso-display/src/v2/snapshots/myso_display__v2__parser__tests__enum_variant_overflow.snap
---
source: crates/myso-display/src/v2/parser.rs
expression: "strands(r#\"{0x1::option::Option<u64>::Some#70000(42u64)}\"#)"
---
Error: Invalid enum variant index at byte offset 32: number too large to fit in target type
